pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/response-header-modifiers.listeners.golden.yaml
resources:
- name: outbound:10.0.0.1:80
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 80
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_msvc_default___backend_80
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: default_backend___msvc_80
              routes:
              - match:
                  path: /v1
                name: kri_mhttpr_default___test-origin_
                responseHeadersToAdd:
                - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                  header:
                    key: response-set-header
                    value: set-value
                - header:
                    key: response-add-header
                    value: add-value
                responseHeadersToRemove:
                - response-header-to-remove
                route:
                  cluster: default_backend___msvc_80
                  timeout: 0s
              - match:
                  prefix: /v1/
                name: kri_mhttpr_default___test-origin_
                responseHeadersToAdd:
                - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                  header:
                    key: response-set-header
                    value: set-value
                - header:
                    key: response-add-header
                    value: add-value
                responseHeadersToRemove:
                - response-header-to-remove
                route:
                  cluster: default_backend___msvc_80
                  timeout: 0s
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  cluster: default_backend___msvc_80
                  timeout: 0s
          statPrefix: default_backend___msvc_80
    metadata:
      filterMetadata:
        io.kuma.tags: {}
    name: outbound:10.0.0.1:80
    trafficDirection: OUTBOUND
